[package]
name = "quadtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "*"
miniquad = "*"

#[patch.crates-io]
#macroquad = { path = '../macroquad' }
#miniquad = { path = '../miniquad' }
